--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "luxon": "^2.4.0",
     "mongoose": "^6.3.5",
     "passport": "^0.5.2",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
